--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
     <title>测试</title>
@@ -10,6 +10,6 @@
 
 </head>
 <body>
-    <p>打开本地HTML文件</p>
+    <p>打开本地HTML文件1234124</p>
 </body>
 </html>
